🐛 fix: spacing between title and menu

--- a/flex-projeto/style.css
+++ b/flex-projeto/style.css
@@ -250,6 +250,10 @@ footer .footer{
   .flex-container{
     flex-direction: column;
   }
+  
+  header .list_menu{
+    padding-top: 20px;
+  }
 
   .introduction{
    flex-direction: column-reverse;
